--- a/src/CSS/Navbaar.css
+++ b/src/CSS/Navbaar.css
@@ -25,11 +25,17 @@
     
 }
 .middleimg{
-    background-image: url('../Component/img/orange.jpg');
+   
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative;
-   
-   
+    position: relative; 
+}
+
+@media screen and (max-width: 768px){
+    .middleimg img{
+        width: 100%;
+        height: 100%;
+        margin-left: 0px;
+    }
     
 }
